# crew-rpg-engine

./: .dttcignore  .env.sample  .gitignore  README.md  pyproject.toml
.instructions/: launch.json
.instructions/rules/: action_plan.rule.md  documentation.rule.md  execute_todolist.rule.md  instructions.md  log_error.rule.md  notify_completion.rule.md  orchestrator.rule.md  planning.rule.md  repo_to_text_import.rule.md  requirements_identification.rule.md  todolist.rule.md  wait_for_user_review.rule.md
outputs/results/: crimson_revelry_session_20250615_153220.md
outputs/verbose/: crimson_revelry_session_20250615_153220.md
planning/documentation/: encontrado.md  estrutura.md  levantamento.md  planejamento.md  plano_acao.md
planning/todolist/: todo.md
scripts/: generate_agent_sheet.py  generate_user_sheet.py
src/crew/: __init__.py  gemini_llm.py  main.py
src/resources/agents/: agent_sheets.json
src/resources/users/: user_sheets.json
tests/: test_utils.py
